--- a/SummerInternship/package.json
+++ b/SummerInternship/package.json
@@ -13,6 +13,7 @@
     "cookie-session": "^1.3.3",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "mongoose": "^5.6.6",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
