--- a/SummerInternship/package.json
+++ b/SummerInternship/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.3.3",
     "ejs": "^2.6.2",
@@ -17,6 +18,7 @@
     "mongoose": "^5.6.6",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0"
   }
 }
